RESOLVED FIXED85015
[chromium] Fix C++ language use.
https://bugs.webkit.org/show_bug.cgi?id=85015
Summary [chromium] Fix C++ language use.
Nico Weber
Reported 2012-04-26 16:43:39 PDT
[chromium] Fix C++ language use.
Attachments
Patch (1.57 KB, patch)
2012-04-26 16:45 PDT, Nico Weber
no flags
Patch (1.57 KB, patch)
2012-04-26 16:46 PDT, Nico Weber
no flags
Nico Weber
Comment 1 2012-04-26 16:45:22 PDT
Nico Weber
Comment 2 2012-04-26 16:46:02 PDT
WebKit Review Bot
Comment 3 2012-04-26 20:31:58 PDT
Comment on attachment 139097 [details] Patch Clearing flags on attachment: 139097 Committed r115404: <http://trac.webkit.org/changeset/115404>
WebKit Review Bot
Comment 4 2012-04-26 20:32:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.