[chromium] Fix C++ language use. https://bugs.webkit.org/show_bug.cgi?id=85015

Reviewed by James Robinson.

Even though MSVC allows it, a sizeof followed by a non-parenthesized
typename is not valid C++.

No functionality change.

* rendering/RenderThemeChromiumWin.cpp:
(WebCore):
(WebCore::getNonClientMetrics):


Canonical link: https://commits.webkit.org/102541@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@115404 268f45cc-cd09-0410-ab3c-d52691b4dbfc